Fix spacing of buttons

--- a/documentation/src/pages/index.module.css
+++ b/documentation/src/pages/index.module.css
@@ -20,4 +20,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 1rem;
+}
+
+.buttons:last-child {
+  margin-bottom: 0;
 }
